UI cleanup and bug fixes